--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,18 +7,27 @@ export(constant_to_export_rights)
 export(constant_to_form_completion)
 export(constant_to_form_rights)
 export(create_batch_glossary)
+export(redcap_arms_read)
 export(redcap_column_sanitize)
+export(redcap_dags_read)
 export(redcap_download_file_oneshot)
 export(redcap_download_instrument)
+export(redcap_events_read)
+export(redcap_events_repeating_read)
+export(redcap_instrument_read)
+export(redcap_instruments_event_read)
+export(redcap_instruments_event_write)
 export(redcap_metadata_read)
 export(redcap_metadata_write)
 export(redcap_next_free_record_name)
 export(redcap_project)
+export(redcap_project_info_read)
 export(redcap_read)
 export(redcap_read_oneshot)
 export(redcap_survey_link_export_oneshot)
 export(redcap_upload_file_oneshot)
 export(redcap_users_export)
+export(redcap_users_read)
 export(redcap_variables)
 export(redcap_version)
 export(redcap_write)
